# GetSongsWebAPI

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
allauth/: utils.py
allauth/account/: forms.py  urls.py  views.py
allauth/migrations/: 0001_initial.py  0002_remove_emailconfirmation_email_address_and_more.py  0003_initial.py  0004_remove_emailconfirmation_email_address_and_more.py  0005_initial.py  0006_remove_emailconfirmation_email_address_and_more.py
api/: README..md  README.md  admin.py  index.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_rename_category_songs_categories.py  0002_rename_video_url_song_preview_url.py  0003_alter_artist_name_alter_artist_slug_and_more.py  0003_remove_songs_categories_songs_categories.py  0004_rename_categories_songs_category.py  0004_song_lyrics.py  0005_remove_song_lyrics.py  0005_rename_artists_artist_rename_categories_category_and_more.py  0006_rename_lyrics_song_lyrics_url.py  0006_song_lyrics.py  0007_alter_song_lyrics.py  0007_alter_song_lyrics_url.py  0008_song_video_url.py
api/tests/: test_artist_model.py  test_artist_viewset.py  test_artists.py  test_auth.py  test_category_model.py  test_song_model.py  test_songs.py  (+1 more)
build_doc/: README.md  styles.py  templates.py
core/: admin.py  forms.py  models.py  pagination.py  serializers.py  urls.py  validators.py  views.py
env/: email.py
gsauth/: README.md  apps.py  models.py  urls.py  views.py
mysite/: settings.py  urls.py
(+74 files in other folders)
